dbus (1.5.2-3) UNRELEASED; urgency=low

  * Revert some of the changes merged from Ubuntu:
    - there's no need to create/chown messagebus' home directory, the sysvinit
      script and the Upstart job both do that on-demand

 -- Simon McVittie <smcv@debian.org>  Thu, 09 Jun 2011 13:59:31 +0100

dbus (1.5.2-2) experimental; urgency=low

  * Merge from unstable
  * Merge and adapt from Ubuntu:
    - create, chown messagebus' home directory in postinst
    - run dbus-uuidgen --ensure in postinst
    - call ReloadConfig with dbus-send in the postinst, since that'll work
      regardless of whether dbus was started with sysvinit or Upstart; just
      call it unconditionally, and ignore any failures we might see (in
      chroots or if dbus-daemon wasn't running)
    - move dbus-daemon and its helpers from /usr to /
    - move libraries into multiarch locations
  * Don't delete jquery.js, no longer installed by recent Doxygen
  * libdbus-1-dev: explicitly pre-depend on multiarch-support to work around
    debhelper and lintian disagreeing whether it's necessary

 -- Simon McVittie <smcv@debian.org>  Thu, 09 Jun 2011 08:00:24 +0100

dbus (1.4.10-2) unstable; urgency=low

  * Disable silent rules so we can have useful buildd logs
  * Update Vcs-Git, Vcs-Browser to the form preferred by the Alioth admins
  * Disable -Wl,--gc-sections and related flags: the size decrease is
    negligible, and these options currently segfault ld on armel and mips*
    (Closes: #628834)
  * Disable the build-time tests for now, they need more upstream work before
    they'll pass in a minimal build chroot

 -- Simon McVittie <smcv@debian.org>  Thu, 02 Jun 2011 17:08:25 +0100

dbus (1.5.2-1) experimental; urgency=low

  * Merge from unstable
  * New(er) upstream version

 -- Simon McVittie <smcv@debian.org>  Wed, 01 Jun 2011 16:32:25 +0100

dbus (1.4.10-1) unstable; urgency=low

  * New upstream version
  * Use a separate build directory
  * Explicitly set compiler flags