@@ -1,2 +1,1 @@
 doc/dbus.devhelp
-debian/libdbus-1-dev.install
