@@ -1,0 +1,5 @@
+debian/tmp/usr/include/dbus*/dbus/dbus*.h
+debian/tmp/usr/lib/*/dbus-1.0/include/dbus/dbus*.h
+debian/tmp/usr/lib/*/libdbus-1*.a
+debian/tmp/usr/lib/*/pkgconfig/dbus-1.pc
+debian/tmp/usr/lib/*/libdbus-1*.so
